[tool.poetry]
name = "simplelsp"
version = "0.1.0"
description = "Simple Python Language Server Protocol implementation for educational purposes"
authors = ["Manuel Saelices <msaelices@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
pylsp = "main:main"
