[tool.poetry]
name = "mdcompletion"
version = "0.1.0"
description = "Simple Python Language Server Protocol implementation for educational purposes"
authors = ["Manuel Saelices <msaelices@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^3.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pre-commit = "^3.7.0"
ruff = "^0.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
pylsp = "main:main"

[tool.black]
revision = "main"
isort = true
skip_string_normalization = true
log_level = "INFO"
line_length = 120
